Added spanish and french translations for PrincipalBundle

--- a/app/Resources/translations/messages.ca.yml
+++ b/app/Resources/translations/messages.ca.yml
@@ -23,6 +23,7 @@ menu:
     usuaris: Usuaris
     sortir: Sortir
     autentificat: Autentificat
+    autentificacio: Autentificació
     
 index:    
     inici: Inici
