Added details to index de llocs i persones
w/o parroquies

--- a/src/ADG/ArxiuBundle/Resources/translations/messages.ca.yml
+++ b/src/ADG/ArxiuBundle/Resources/translations/messages.ca.yml
@@ -226,6 +226,7 @@ llistat:
     taula:
         nodac: Classificació
         num: Número
-        nom: Nom    
+        nom: Nom
+        operacions: Operacions    
    
          
