--- a/app/Resources/translations/messages.ca.yml
+++ b/app/Resources/translations/messages.ca.yml
@@ -18,6 +18,12 @@ menu:
     arxiu: Arxiu
     classificacio: Classificació
     fons: Fons i series
+    
+    dispenses: Dispenses matrimonials
+    llistat: Index de llocs i persones
+    documents: Documents i textos
+    parroquies: Parròquies 
+    
     altres: Altres
     noticies: Notícies
     usuaris: Usuaris
