--- a/app/Resources/translations/messages.es.yml
+++ b/app/Resources/translations/messages.es.yml
@@ -18,6 +18,12 @@ menu:
     arxiu: Arxivo
     classificacio: Classificación
     fons: Fondo y series
+    
+    dispenses: Dispensas matrimoniales
+    llistat: Indice de lugares i personas
+    documents: Documentos y textos
+    parroquies: Parroquias 
+    
     altres: Otros
     noticies: Noticias
     usuaris: Usuarios
