--- a/app/Resources/translations/messages.fr.yml
+++ b/app/Resources/translations/messages.fr.yml
@@ -18,6 +18,12 @@ menu:
     arxiu: Archive
     classificacio: Classement
     fons: Contexte et série
+    
+    dispenses: Dérogations mariage
+    llistat: Index des lieux et des personnes
+    documents: Documents et textes
+    parroquies: paroisses
+    
     altres: Autres
     noticies: Nouvelles
     usuaris: Utilisateurs
