Added french translations

--- a/app/Resources/translations/messages.fr.yml
+++ b/app/Resources/translations/messages.fr.yml
@@ -16,13 +16,13 @@ menu:
     administrar: Gérer
     general: Général
     arxiu: Archive
-    classificacio: Classement
-    fons: Contexte et série
+    classificacio: Classification
+    fons: Fonds et séries
     
-    dispenses: Dérogations mariage
-    llistat: Index des lieux et des personnes
-    documents: Documents et textes
-    parroquies: paroisses
+    dispenses: Dispenses de mariage
+    llistat: Index des lieux et personnes
+    documents: Documents i textes
+    parroquies: Paroisses
     
     altres: Autres
     noticies: Nouvelles
