Updated main colors and main title

--- a/app/Resources/translations/messages.ca.yml
+++ b/app/Resources/translations/messages.ca.yml
@@ -1,6 +1,6 @@
 #Resources\translations\messages.ca.yml
 base:
-    title: Arxiu diocesà de Girona
+    title: Bisbat de Girona
     contacte: Contacte
     normativa: Normativa
     administrar: Administrar
