--- a/app/Resources/translations/messages.es.yml
+++ b/app/Resources/translations/messages.es.yml
@@ -1,6 +1,6 @@
 #Resources\translations\messages.es.yml
 base:
-    title: Archivo diocesano de Girona
+    title: Obispado de Gerona
     contacte: Contacto
     normativa: Normativa
     administrar: Administrar
