--- a/app/Resources/translations/messages.fr.yml
+++ b/app/Resources/translations/messages.fr.yml
@@ -1,6 +1,6 @@
 #Resources\translations\messages.fr.yml
 base:
-    title: Archives diocésain de Gérone
+    title: Évêché de Gérone
     contacte: Contactez
     normativa: Règlements
     administrar: Gérer
